--- a/public/css/markdown-css.css
+++ b/public/css/markdown-css.css
@@ -95,6 +95,6 @@ blockquote p {
 hr {
     width: 540px;
     text-align: left;
-    margin: 0 auto 0 0;
+    margin: 10px auto 10px 0;
     color: #999;
 }
