--- a/views/admin/navigation/navigation_title_content_add.html
+++ b/views/admin/navigation/navigation_title_content_add.html
@@ -27,10 +27,10 @@
     <div class="form-group">
         <label for="Nav_content_name">标题内容：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_name" placeholder="请输入内容标题名称" name="Nav_content_name">
-        <label for="Nav_content_url">标题url：</label>
-        <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_url" placeholder="请输入标题内容跳转链接" name="Nav_content_url">
         <label for="Nav_content_order">内容标题顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_order" placeholder="请输入内容标题顺序，小数字排前面，默认0" name="Nav_content_order">
+        <label for="Nav_content_url">文章内容：</label>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="Nav_content_url" id="Nav_content_url" cols="30" rows="10" placeholder="输入文章所有内容,用markdown语法"></textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
