--- a/views/admin/navigation/navigation_title_content_edit.html
+++ b/views/admin/navigation/navigation_title_content_edit.html
@@ -41,7 +41,7 @@
         <label for="Nav_content_order">标题内容顺序：</label>
         <input style="margin: 5px 0 20px" type="text" class="form-control" id="Nav_content_order" value="{{nav_content.Nav_content_order}}" name="Nav_content_order">
         <label for="Nav_content_url">文章内容：</label>
-        <textarea class="form-control" style="margin-top: 10px;resize: none" name="Nav_content_url" id="Nav_content_url" cols="30" rows="10">{{nav_content.Nav_content_url}}</textarea>
+        <textarea class="form-control" style="margin-top: 10px;resize: none" name="Nav_content_url" id="Nav_content_url" cols="30" rows="10" placeholder="输入文章所有内容,用markdown语法">{{nav_content.Nav_content_url}}</textarea>
     </div>
     <button type="submit" class="btn btn-default">提交</button>
 </form>
