--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -99,6 +99,12 @@
                         <li><a href="/admin/file_upload/teacher/list">教师图片列表</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">查看留言<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/admin/leave_message">留言列表</a></li>
+                    </ul>
+                </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown">
