--- a/public/css/main_layout_index.css
+++ b/public/css/main_layout_index.css
@@ -469,6 +469,10 @@
     background: none\9;
     filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/public/images/tel_close.png",  sizingMethod="scale")
 }
+.message_form {
+    width: 290px;
+    height: 260px;
+}
 #tel_more {
     display: none;
     position: absolute;
