--- a/views/main/index.html
+++ b/views/main/index.html
@@ -1012,14 +1012,14 @@
     <em>
         <div id="tel_more">留言后我们会马上联系您的~</div>
     </em>
-    <!--<form action="/leave_message" method="post" target="_blank">-->
+    <div class="message_form">
         <textarea name="word" id="word" cols="30" rows="5" placeholder="在这里写下你的问题~" maxlength="200" wrap="hard"></textarea>
         <label for="name">您的姓名</label>
         <input type="text" placeholder="请输入您的姓名" id="name" name="name" required>
         <label for="tel">您的电话</label>
         <input type="text" placeholder="请输入您的联系方式" id="tel" name="tel" required>
         <input type="submit" id="submit">
-    <!--</form>-->
+    </div>
 </div>
 <div class="tel_logo">
     <div class="tel_title">留言</div>
