--- a/views/main/layout_article.html
+++ b/views/main/layout_article.html
@@ -225,14 +225,14 @@
     <em>
         <div id="tel_more">留言后我们会马上联系您的~</div>
     </em>
-    <form action="/leave_message" method="post">
+    <div class="message_form">
         <textarea name="word" id="word" cols="30" rows="5" placeholder="在这里写下你的问题~" maxlength="200" wrap="hard"></textarea>
         <label for="name">您的姓名</label>
         <input type="text" placeholder="请输入您的姓名" id="name">
         <label for="tel">您的电话</label>
         <input type="text" placeholder="请输入您的联系方式" id="tel">
         <input type="submit" id="submit">
-    </form>
+    </div>
 </div>
 <div class="tel_logo">
     <div class="tel_title">留言</div>
